--- a/index.html
+++ b/index.html
@@ -11,11 +11,18 @@
 <body>
   <header class="menu">
     <a href="home">HOME</a>
-    <a href="home">FALE CONOSCO
-      <a href="home">SAIBA MAIS</a>
+    <a href="home">FALE CONOSCO</a>
+    <a href="home">SAIBA MAIS</a>
   </header>
-  <h1>Projeto versão 1</h1>
 
+  <main>
+    <h1>Projeto versão 2</h1>
+  </main>
+
+  <footer>
+    <p>Todos os direitos de Leonidas Eduardo</p>
+  </footer>
 </body>
+
 
 </html>
