--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
   </header>
 
   <main>
-    <h1>Projeto versão 2.5</h1>
+    <h1>Projeto versão 3</h1>
   </main>
+  <div class="imagens">
+
+    <img src="img/00180.jpg" alt="">
+    <img src="img/3605178731_2241244726_1743678659835.png" alt="">
+    <img src="img/527526.png" alt="">
+  </div>
   <hr>
   <footer>
     <p>Todos os direitos de Leonidas Eduardo</p>
